<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorHotel"
    tools:context=".FormularioHotelActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <CalendarView
                android:id="@+id/calendarView_formulario_hotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-40dp"
                android:text="@string/fecha_inicio"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fechainicio_formulario_hotel"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:text="12-10-2012" />

                <Button
                    android:id="@+id/button_hotel_fecha_inicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorBotonHotel"
                    android:onClick="bindeaFechaInicio"
                    android:text="@string/selecciona_fecha_inicio" />
            </LinearLayout>


            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha_fin"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fechafin_formulario_hotel"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="12-10-2012" />

                <Button
                    android:id="@+id/button_hotel_fecha_fin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorBotonHotel"
                    android:onClick="bindeaFechaFin"
                    android:text="@string/selecciona_fecha_fin" />

                <Button
                    android:id="@+id/button_hotel_eliminar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:onClick="eliminarHotel"
                    android:text="@string/eliminar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Precio por noche"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/precio_formulario_hotel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="precioOnClick"
                        android:entries="@array/precios">

                    </Spinner>

                </LinearLayout>

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nº de noches"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/numero_noches_formulario_hotel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0" />


                </LinearLayout>

                <Button
                    android:id="@+id/button_hotel_actualizar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:onClick="actualizarHotel"
                    android:text="@string/actualizar" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Coste estancia"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/costestancia_formulario_hotel"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="0" />

                <Button
                    android:id="@+id/button_hotel_calcular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorHotelcalcular"
                    android:onClick="calcular"
                    android:text="@string/hotel_calcular" />

                <Button
                    android:id="@+id/button_hotel_añadir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:backgroundTint="@android:color/holo_green_light"
                    android:onClick="añadirHotel"
                    android:text="@string/añadir" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pagado"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/pagado_formulario_hotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/pagado">

            </Spinner>

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>