<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMascotas"
    tools:context="com.example.fede.animalarium.FormularioCitaActivity"
    tools:layout_editor_absoluteY="81dp">


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="139dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="39dp">

                <ImageButton
                    android:id="@+id/imageButtonFormulario"
                    android:layout_width="200dp"
                    android:layout_height="113dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/image"
                    tools:clickable="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Hora de la cita:" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="49dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <EditText
                            android:id="@+id/telefono1"
                            android:layout_width="40dp"
                            android:layout_height="51dp"
                            android:ems="10"
                            android:inputType="time"
                            android:onClick="horaOnClick"
                            android:selectAllOnFocus="true"
                            android:layout_marginTop="-2dp"
                            android:text="00"
                            android:textSize="30sp"
                            tools:theme="@style/Base.TextAppearance.AppCompat.Display2" />

                        <TextView
                            android:layout_width="10dp"
                            android:layout_height="51dp"
                            android:text=":"
                            android:layout_marginTop="-15dp"

                            android:textSize="30sp" />

                        <EditText
                            android:id="@+id/minutos"
                            android:layout_width="40dp"
                            android:layout_height="51dp"
                            android:ems="10"
                            android:inputType="time"
                            android:layout_marginTop="-2dp"
                            android:onClick="minutosOnClick"
                            android:selectAllOnFocus="true"
                            android:text="00"
                            android:textSize="30sp"
                            tools:theme="@style/Base.TextAppearance.AppCompat.Display2" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tarifaTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tarifa:" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="51dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/tarifa"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:inputType="number"
                            android:onClick="tarifaOnClick"
                            android:selectAllOnFocus="true"
                            android:text="0"
                            android:textSize="30sp"
                            tools:theme="@style/Base.TextAppearance.AppCompat.Display2" />

                        <TextView
                            android:id="@+id/euro"
                            android:layout_width="51dp"
                            android:layout_height="match_parent"
                            android:text="€"
                            android:textSize="30sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mascotaTV"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="@string/mascota"
                android:textColorHighlight="@android:color/darker_gray" />

            <EditText
                android:id="@+id/mascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/razaTV"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="@string/raza"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mascotaTV" />

            <EditText
                android:id="@+id/raza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/mascota"
                app:layout_constraintStart_toEndOf="@+id/razaTV"
                app:layout_constraintTop_toBottomOf="@+id/tamaño"
                app:layout_constraintVertical_bias="0.484" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tamañoTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="@string/tama_o"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/razaTV" />

            <Spinner
                android:id="@+id/tamaño"
                android:layout_width="39dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="false"
                app:layout_constraintBottom_toBottomOf="@+id/telefon2"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/raza"
                app:layout_constraintVertical_bias="0.5" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/trabajoTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="@string/trabajo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Spinner
                android:id="@+id/trabajo"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="@id/tamaño"
                app:layout_constraintEnd_toEndOf="@id/trabajoTV"
                app:layout_constraintTop_toTopOf="@id/telefon2"
                app:layout_constraintVertical_bias="0.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/telefonoTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="0"
                android:text="@string/tel_fono1"
                app:layout_constraintBottom_toTopOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.75" />

            <EditText
                android:id="@+id/telefono1"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:inputType="phone"
                app:layout_constraintBottom_toBottomOf="@id/telefon2"
                app:layout_constraintEnd_toEndOf="@id/telefonoTV"
                app:layout_constraintTop_toTopOf="@id/trabajo"
                app:layout_constraintVertical_bias="0.375" />

            <Button
                android:id="@+id/phone1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@android:drawable/stat_sys_phone_call_forward"
                android:onClick="llamada1"
                android:scaleX="0.6"
                android:scaleY="0.6"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="283dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="32dp"
                android:layout_weight="0"
                android:text="@string/tel_fono2"
                app:layout_constraintBottom_toTopOf="@+id/botonesL"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.75" />

            <EditText
                android:id="@+id/telefono2"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:inputType="phone"
                app:layout_constraintBottom_toBottomOf="@id/telefon2"
                app:layout_constraintEnd_toEndOf="@id/telefonoTV"
                app:layout_constraintTop_toTopOf="@id/trabajo"
                app:layout_constraintVertical_bias="0.375" />

            <Button
                android:id="@+id/phone2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@android:drawable/stat_sys_phone_call_forward"
                android:onClick="llamada2"
                android:scaleX="0.6"
                android:scaleY="0.6"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="325dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/propietarioTV"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="0"
                android:text="@string/propietario"
                app:layout_constraintBottom_toTopOf="@+id/botonesL"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/propietario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/telefon2"
                app:layout_constraintTop_toBottomOf="@+id/telefon2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/botonesL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/formulario_activity_añadir_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@android:color/holo_green_light"
                android:text="Añadir"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButtonFormulario" />

            <Button
                android:id="@+id/formulario_activity_actualizar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:onClick="actualizarCita"
                android:text="ACTUALIZAR"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButtonFormulario" />

            <Button
                android:id="@+id/formulario_activity_eliminar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@android:color/holo_red_light"
                android:onClick="eliminarCita"
                android:text="Eliminar"
                app:layout_constraintEnd_toEndOf="parent" />


        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
